tests/checker/ok/lambda_in_list_map.can
main = () => Unit {
    List(1, 2, 3)
        .map((Int) => Int { Int.mul(2) })
        .length()
        .print()
}
