tests/checker/fail/set_not_implemented.can
tags = (Set) -> Set {
    Set.insert("k")
}

main = () -> Unit {
    "done".print()
}
